# subtitle-tool

./: .gitignore  README.md  balancer.py  pyproject.toml
.github/workflows/: code-review.yaml  publish.yaml  release.yaml  run-tests.yaml  test.yml
src/subtitle_tool/: TODO.md  ai.py  audio.py  cli.py  subtitles.py  video.py
tests/: test_ai.py  test_audio.py  test_cli.py  test_subtitles.py  test_utils.py  test_video.py
