[project]
name = "subtitle-tool"
version = "0.1.20"
description = "Tool for generating subtitles with help from Google Gemini AI."
authors = [{ name = "J. Eduardo", email = "j.eduardo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "click>=8.2.1",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.16.1",
    "humanize>=4.12.3",
    "pydub>=0.25.1",
    "pysubs2>=1.8.0",
    "srt-equalizer>=0.1.10",
    "tenacity>=9.1.2",
]

[project.scripts]
subtitle-tool = "subtitle_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0", "pytest-cov>=6.1.1", "ruff>=0.12.0"]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "Q",  # flake8 ruleset
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.lint.per-file-ignores]
"__init__.py" = ["F401"] # module imported but unused
"tests/**/*" = ["E501"]  # line too long
